app prop changes